@@ -4,15 +4,15 @@ import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.JSONObject;
 import com.alibaba.fastjson.TypeReference;
 import com.alibaba.nacos.api.config.annotation.NacosValue;
-import com.alibaba.nacos.client.naming.utils.CollectionUtils;
 import com.panda.merge.advertise.utils.RedisUtils;
 import com.panda.merge.calculation.impl.FootballCalculationServiceImpl;
+import com.panda.merge.calculation.impl.SnookerCalculationServiceImpl;
 import com.panda.merge.common.enums.DataSourceCodeEnum;
 import com.panda.merge.common.enums.TimeStatusEnum;
 import com.panda.merge.common.utils.IdWorker;
+import com.panda.merge.config.RedisConfig;
 import com.panda.merge.config.RedisService;
-import com.panda.merge.constant.SourceTypeEnum;
-import com.panda.merge.constant.SportTypeEnum;
+import com.panda.merge.constant.*;
 import com.panda.merge.dto.*;
 import com.panda.merge.dto.message.SaleUpdateLiveBusinessEventMessage;
 import com.panda.merge.dto.scores.MatchScoresBetterDto;
@@ -38,16 +38,14 @@ import org.springframework.context.annotation.DependsOn;
 import org.springframework.stereotype.Component;
 import org.springframework.util.ObjectUtils;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static com.panda.merge.common.enums.Constant.PD_FOOTBALL_EVENT_MONITOR;
 import static com.panda.merge.common.enums.Constant.REDIS_KEY.RONGHE_PD_FOOTBALL_PUBLIC_EVENT;
 import static com.panda.merge.config.RedisConfig.REDIS_HOUR_TIME;
-import static com.panda.merge.constant.ConstantSystem.*;
+import static com.panda.merge.constant.ConstantSystem.LIVE_BUSINESS_EVENT_UPDATE_MESSAGE;
+import static com.panda.merge.constant.ConstantSystem.SOLD_MESSAGE;
 import static com.panda.merge.constant.SportPeriodConstant.SportPeriod.WHOLE_MATCH;
 
 /**
@@ -85,7 +83,7 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
     @Autowired
     RedisUtils redisUtils;
     @Autowired
-    com.panda.merge.repository.StandardSportMarketSellRepository standardSportMarketSellRepository;
+    StandardSportMarketSellRepository standardSportMarketSellRepository;
     @Autowired
     RedisService redisService;
     @Autowired
@@ -94,6 +92,8 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
     ThirdMatchInfoService thirdMatchInfoService;
     @Autowired
     StandardMatchInfoService standardMatchInfoService;
+    @Autowired
+    SnookerCalculationServiceImpl snookerCalculationService;
     @NacosValue(value = "${datacenter.scores.switch:false}", autoRefreshed = true)
     private Boolean datacenterMergeSwitch;
     @Autowired
@@ -110,10 +110,14 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         //1.查询标准比分
         List<Long> standardIdList = new ArrayList<>();
 
-        if (request == null || request.getData() == null || request.getData().getMatchId() == null) {
+        if (request.getData() == null || request.getData().getMatchId() == null) {
             return;
         }
         try {
+            if(request.getData().getBusinessEventCodeOld().equals(request.getData().getBusinessEventCode())){
+                log.info("{}【SoldMessageScoresConsumer:" + SOLD_MESSAGE + "】【::" + request.getData().getMatchId() + "::】新旧数据源一致,不处理和下发比分...",request.getLinkId());
+                return;
+            }
             //监听到之后需要复制比分
             // 判断切换前后是否包含 PD PD2 比分
             // 如果有则来回切换的是否复制
@@ -126,7 +130,6 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                 copyScore(request);
                 log.info("{}【SoldMessageScoresConsumer:" + SOLD_MESSAGE + "】【::" + request.getData().getMatchId() + "::】数据复制完成:{}-->{}",
                         request.getLinkId(), request.getData().getBusinessEventCodeOld(), request.getData().getBusinessEventCode());
-
             }
 
             // pd切换到其他事件源
@@ -229,7 +232,10 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
             } else {
                 scores.setSecondsMatchStart(0L);
             }
-            scoresProducer.sendToMQ(scores, request.getLinkId());
+            //非支持比分中心的球种,直接下发
+            if (!DataSourceConstant.STANDARC_SCORE_SPORTIDS.contains(matchScoresInfo.getSportId())){
+                scoresProducer.sendToMQ(scores, request.getLinkId());
+            }
             standardSportMarketSellRepository.cleanStandardMatchSell(standardIdList.get(0));
 
             //15分钟要存储缓存切换
@@ -238,6 +244,11 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                 buildPossession(scores, request.getData());
                 footballCalculationService.save15MinToCacheByStandardId(request.getData().getMatchId());
             }
+            if((data.getBusinessEventCode().equals("PD")&&data.getBusinessEventCodeOld().equals("PD2"))||(data.getBusinessEventCode().equals("PD2")&&data.getBusinessEventCodeOld().equals("PD"))){
+                log.info("【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】PD、PD2之间不复制标准比分.");
+                return;
+            }
+            log.info("【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】切换事件源完成,复制标准比分并下发.");
             copyStandardScores(scores, request.getLinkId());
         } catch (Exception e) {
             log.error("【SoldMessageScoresConsumer:" + SOLD_MESSAGE + "】【::" + request.getLinkId() + "::】开售处理后补发比分异常:{}", e);
@@ -252,19 +263,25 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
      * @param scores
      */
     private void copyStandardScores(MatchScoresBetterDto scores, String linkId) {
+        if(!SportTypeEnum.FOOTBALL.getValue().equals(scores.getSportId())){
+            scoresProducer.sendToMQ(scores, linkId);
+            log.info("非足球切换事件源,比分直接下发,linkId={}",linkId);
+            return;
+        }
         if(!scores.getSportId().equals(1L) && !scores.getSportId().equals(2L)){
             return;
         }
-        StandardMatchScores standardMatchScores = scoresRedisHelp.getCatchStandScoreByMatchId(new Long(scores.getMatchId()));
+        StandardMatchScores standardMatchScores = scoresRedisHelp.getCatchStandScoreByMatchId(Long.valueOf(scores.getMatchId()));
         if (standardMatchScores == null) {
             standardMatchScores = new StandardMatchScores();
         }
         standardMatchScores.setDataSourceCode(scores.getDataSourceCode());
-        standardMatchScores.setScoreJson(scores.getScoresJson());
+//        standardMatchScores.setScoreJson();
         standardMatchScores.setUpdateTime(System.currentTimeMillis());
         if (SportTypeEnum.FOOTBALL.getValue().equals(scores.getSportId())) {
-            Map<Long, FootballScores> footballScores = copyFootballScores(scores, standardMatchScores);
+            Map<Long, FootballScores> footballScores = copyFootballScores(scores, standardMatchScores,linkId);
             standardMatchScores.setScoreJson(JSONObject.toJSONString(footballScores));
+            scores.setScoresJson(JSONObject.toJSONString(footballScores));
         } /*else if (SportTypeEnum.BASKETBALL.getValue().equals(scores.getSportId())) {
             copyBasketballScores(scores, standardMatchScores);
         } else if (SportTypeEnum.TENNIS.getValue().equals(scores.getSportId())) {
@@ -278,6 +295,8 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         } else {
             log.info("【SoldMessageScoresConsumer:" + SOLD_MESSAGE + "】【::" + request.getLinkId() + "::】开售处理后补发比分:无该类型赛事");
         }*/
+        //支持比分中心的球种,复制比分后下发
+        scoresProducer.sendToMQ(scores, linkId);
         scoresRedisHelp.saveCatchStandScore(standardMatchScores);
         log.info("【SoldMessageScoresConsumer:" + SOLD_MESSAGE + "】【::" + linkId + "::】开售处理后补发比分,复制标准比分完成");
     }
@@ -297,7 +316,7 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         standScores.setShot(soresSource.getShot());
 
     }
-    private Map<Long, FootballScores> copyFootballScores(MatchScoresBetterDto scores, StandardMatchScores standardMatchScores) {
+    private Map<Long, FootballScores> copyFootballScores(MatchScoresBetterDto scores, StandardMatchScores standardMatchScores,String linkId) {
         FootballSwitch footballSwitch = new FootballSwitch();
         if (StringUtils.isNotEmpty(standardMatchScores.getDataSourceAccoSwitch())) {
             footballSwitch = JSONObject.parseObject(standardMatchScores.getDataSourceAccoSwitch(), FootballSwitch.class);
@@ -350,232 +369,249 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
             if (standScores == null) {
                 standScores = new FootballScores(entry.getKey());
             }
-            if (entry.getKey() == 6L) {
-                //获取三方比分当前阶段的比分
-                FootballScores thirdScores = entry.getValue();
-                if(thirdScores==null){
-                    thirdScores = new FootballScores(entry.getKey());
-                }
-                FootballScores footballMinScores1 = standardScores.get(60899L);
-                FootballScores footballMinScores2 = standardScores.get(61799L);
-                FootballScores footballMinScores3 = standardScores.get(62699L);
+            if (Objects.equals(entry.getKey(), SportPeriodConstant.FootballPeriod.period_60899)) {
+                FootballScores footballMinScores1 = standardScores.get(SportPeriodConstant.FootballPeriod.period_60899);
+                log.info("{},获取标准比分60899:{}",linkId,footballMinScores1);
                 if (footballMinScores1 == null) {
-                    footballMinScores1 = new FootballScores(60899L);
-                    standardScores.put(60899L, footballMinScores1);
+                    footballMinScores1 = new FootballScores(SportPeriodConstant.FootballPeriod.period_60899);
+                    standardScores.put(SportPeriodConstant.FootballPeriod.period_60899, footballMinScores1);
                 }
-                if (footballMinScores2 == null) {
-                    footballMinScores2 = new FootballScores(61799L);
-                    standardScores.put(61799L, footballMinScores2);
-                }
-                if (footballMinScores3 == null) {
-                    footballMinScores3 = new FootballScores(62699L);
-                    standardScores.put(62699L, footballMinScores3);
-                }
-                if (footballSwitch.getGoalHf() == 1) {
-                    standScores.setGoal(thirdScores.getGoal());
-                }
+                log.info("{},获取开关 getGoal60899:{}",linkId,footballSwitch.getGoal60899());
                 //0-15分钟进球
                 if(footballSwitch.getGoal60899()==1){
-                    if(allPeriodScores.get(60899L)!=null){
-                        footballMinScores1.setGoal(allPeriodScores.get(60899L).getGoal());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899)!=null){
+                        log.info("{},获取比分 60899L:{}",linkId,allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899).getGoal());
+                        footballMinScores1.setGoal(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899).getGoal());
                     }
-                }
-                //15-30分钟进球
-                if(footballSwitch.getGoal61799()==1){
-                    if(allPeriodScores.get(61799L)!=null){
-                        footballMinScores2.setGoal(allPeriodScores.get(61799L).getGoal());
-                    }
-                }
-                //30-45分钟进球
-                if(footballSwitch.getGoal62699()==1){
-                    if(allPeriodScores.get(62699L)!=null){
-                        footballMinScores3.setGoal(allPeriodScores.get(62699L).getGoal());
-                    }
-                }
-                if (footballSwitch.getCornerHf() == 1) {
-                    standScores.setCorner(thirdScores.getCorner());
                 }
                 //0-15分钟角球
                 if(footballSwitch.getCorner60899()==1){
-                    if(allPeriodScores.get(60899L)!=null){
-                        footballMinScores1.setCorner(allPeriodScores.get(60899L).getCorner());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899)!=null){
+                        footballMinScores1.setCorner(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899).getCorner());
+                    }
+                }
+                //0-15分钟黄牌
+                if(footballSwitch.getYellowCard60899()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899)!=null){
+                        footballMinScores1.setYellowCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899).getYellowCard());
+                    }
+                }
+                //0-15分钟红牌
+                if(footballSwitch.getYellowCard60899()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899)!=null){
+                        footballMinScores1.setRedCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_60899).getRedCard());
+                    }
+                }
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_60899, footballMinScores1);
+                log.info("{},切换事件源后同步比分60899L:{}",linkId,footballMinScores1.getGoal());
+            }else if(entry.getKey() == SportPeriodConstant.FootballPeriod.period_61799) {
+                FootballScores footballMinScores2 = standardScores.get(SportPeriodConstant.FootballPeriod.period_61799);
+                log.info("{},获取标准比分61799:{}",linkId,footballMinScores2);
+                if (footballMinScores2 == null) {
+                    footballMinScores2 = new FootballScores(SportPeriodConstant.FootballPeriod.period_61799);
+                    standardScores.put(SportPeriodConstant.FootballPeriod.period_61799, footballMinScores2);
+                }
+                log.info("{},获取开关 getGoal61799:{}",linkId,footballSwitch.getGoal61799());
+                //15-30分钟进球
+                if(footballSwitch.getGoal61799()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799)!=null){
+                        log.info("{},获取比分 61799L:{}",linkId,allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799).getGoal());
+                        footballMinScores2.setGoal(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799).getGoal());
                     }
                 }
                 //15-30分钟角球
                 if(footballSwitch.getCorner61799()==1){
-                    if(allPeriodScores.get(61799L)!=null){
-                        footballMinScores2.setCorner(allPeriodScores.get(61799L).getCorner());
-                    }
-                }
-                //30-45分钟角球
-                if(footballSwitch.getCorner62699()==1){
-                    if(allPeriodScores.get(62699L)!=null){
-                        footballMinScores3.setCorner(allPeriodScores.get(62699L).getCorner());
-                    }
-                }
-                if (footballSwitch.getYellowHf() == 1) {
-                    standScores.setYellowCard(thirdScores.getYellowCard());
-                }
-                //0-15分钟黄牌
-                if(footballSwitch.getYellowCard60899()==1){
-                    if(allPeriodScores.get(60899L)!=null){
-                        footballMinScores1.setYellowCard(allPeriodScores.get(60899L).getYellowCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799)!=null){
+                        footballMinScores2.setCorner(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799).getCorner());
                     }
                 }
                 //15-30分钟黄牌
                 if(footballSwitch.getYellowCard61799()==1){
-                    if(allPeriodScores.get(61799L)!=null){
-                        footballMinScores2.setYellowCard(allPeriodScores.get(61799L).getYellowCard());
-                    }
-                }
-                //30-45分钟黄牌
-                if(footballSwitch.getYellowCard62699()==1){
-                    if(allPeriodScores.get(62699L)!=null){
-                        footballMinScores3.setYellowCard(allPeriodScores.get(62699L).getYellowCard());
-                    }
-                }
-                if (footballSwitch.getRedHf() == 1) {
-                    standScores.setRedCard(thirdScores.getRedCard());
-                }
-                //0-15分钟红牌
-                if(footballSwitch.getYellowCard60899()==1){
-                    if(allPeriodScores.get(60899L)!=null){
-                        footballMinScores1.setRedCard(allPeriodScores.get(60899L).getRedCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799)!=null){
+                        footballMinScores2.setYellowCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799).getYellowCard());
                     }
                 }
                 //15-30分钟红牌
                 if(footballSwitch.getYellowCard61799()==1){
-                    if(allPeriodScores.get(61799L)!=null){
-                        footballMinScores2.setRedCard(allPeriodScores.get(61799L).getRedCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799)!=null){
+                        footballMinScores2.setRedCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_61799).getRedCard());
+                    }
+                }
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_61799, footballMinScores2);
+                log.info("{},切换事件源后同步比分61799L:{}",linkId,footballMinScores2.getGoal());
+            }else if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_62699){
+                FootballScores footballMinScores3 = standardScores.get(SportPeriodConstant.FootballPeriod.period_62699);
+                log.info("{},获取标准比分62699:{}",linkId,footballMinScores3);
+                if (footballMinScores3 == null) {
+                    footballMinScores3 = new FootballScores(SportPeriodConstant.FootballPeriod.period_62699);
+                    standardScores.put(SportPeriodConstant.FootballPeriod.period_62699, footballMinScores3);
+                }
+                log.info("{},获取开关 获取标准比分62699:{}",linkId,footballSwitch.getGoal62699());
+                //30-45分钟进球
+                if(footballSwitch.getGoal62699()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699)!=null){
+                        log.info("{},获取比分 62699L:{}",linkId,allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699).getGoal());
+                        footballMinScores3.setGoal(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699).getGoal());
+                    }
+                }
+                //30-45分钟角球
+                if(footballSwitch.getCorner62699()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699)!=null){
+                        footballMinScores3.setCorner(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699).getCorner());
+                    }
+                }
+                //30-45分钟黄牌
+                if(footballSwitch.getYellowCard62699()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699)!=null){
+                        footballMinScores3.setYellowCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699).getYellowCard());
                     }
                 }
                 //30-45分钟红牌
                 if(footballSwitch.getYellowCard62699()==1){
-                    if(allPeriodScores.get(62699L)!=null){
-                        footballMinScores3.setRedCard(allPeriodScores.get(62699L).getRedCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699)!=null){
+                        footballMinScores3.setRedCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_62699).getRedCard());
                     }
+                }
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_62699, footballMinScores3);
+                log.info("{},切换事件源后同步比分62699L:{}",linkId,footballMinScores3.getGoal());
+            }else if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_6) {
+                //获取三方比分当前阶段的比分
+                FootballScores thirdScores = entry.getValue();
+                if(thirdScores==null){
+                    thirdScores = new FootballScores(entry.getKey());
+                }
+                if (footballSwitch.getGoalHf() == 1) {
+                    standScores.setGoal(thirdScores.getGoal());
+                }
+                if (footballSwitch.getCornerHf() == 1) {
+                    standScores.setCorner(thirdScores.getCorner());
+                }
+                if (footballSwitch.getYellowHf() == 1) {
+                    standScores.setYellowCard(thirdScores.getYellowCard());
+                }
+                if (footballSwitch.getRedHf() == 1) {
+                    standScores.setRedCard(thirdScores.getRedCard());
                 }
                 //三方的进攻危险进攻射正射偏控球率数据同步
                 this.setOther(standScores, thirdScores);
                 standardScores.put(6L, standScores);
-                standardScores.put(60899L, footballMinScores1);
-                standardScores.put(61799L, footballMinScores2);
-                standardScores.put(62699L, footballMinScores3);
-            }
-
-            if (entry.getKey() == 7L) {
-                //获取三方比分当前阶段的比分
-                FootballScores thirdScores = entry.getValue();
-                if(thirdScores==null){
-                    thirdScores = new FootballScores(entry.getKey());
-                }
-                FootballScores footballMinScores1 = standardScores.get(73599L);
-                FootballScores footballMinScores2 = standardScores.get(74499L);
-                FootballScores footballMinScores3 = standardScores.get(75399L);
+            }else if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_73599) {
+                FootballScores footballMinScores1 = standardScores.get(SportPeriodConstant.FootballPeriod.period_73599);
                 if (footballMinScores1 == null) {
-                    footballMinScores1 = new FootballScores(73599L);
-                    standardScores.put(73599L, footballMinScores1);
-                }
-                if (footballMinScores2 == null) {
-                    footballMinScores2 = new FootballScores(74499L);
-                    standardScores.put(74499L, footballMinScores2);
-                }
-                if (footballMinScores3 == null) {
-                    footballMinScores3 = new FootballScores(75399L);
-                    standardScores.put(75399L, footballMinScores3);
-                }
-                if (footballSwitch.getGoalFt() == 1) {
-                    standScores.setGoal(thirdScores.getGoal());
+                    footballMinScores1 = new FootballScores(SportPeriodConstant.FootballPeriod.period_73599);
+                    standardScores.put(SportPeriodConstant.FootballPeriod.period_73599, footballMinScores1);
                 }
                 //45-60钟进球
                 if(footballSwitch.getGoal73599()==1){
-                    if(allPeriodScores.get(73599L)!=null){
-                        footballMinScores1.setGoal(allPeriodScores.get(73599L).getGoal());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599)!=null){
+                        footballMinScores1.setGoal(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599).getGoal());
                     }
-                }
-                //60-75分钟进球
-                if(footballSwitch.getGoal74499()==1){
-                    if(allPeriodScores.get(74499L)!=null){
-                        footballMinScores2.setGoal(allPeriodScores.get(74499L).getGoal());
-                    }
-                }
-                //75-90分钟进球
-                if(footballSwitch.getGoal75399()==1){
-                    if(allPeriodScores.get(75399L)!=null){
-                        footballMinScores3.setGoal(allPeriodScores.get(75399L).getGoal());
-                    }
-                }
-                if (footballSwitch.getCornerFt() == 1) {
-                    standScores.setCorner(thirdScores.getCorner());
                 }
                 //45-60钟角球
                 if(footballSwitch.getCorner73599()==1){
-                    if(allPeriodScores.get(73599L)!=null){
-                        footballMinScores1.setCorner(allPeriodScores.get(73599L).getCorner());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599)!=null){
+                        footballMinScores1.setCorner(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599).getCorner());
+                    }
+                }
+                //45-60钟黄牌
+                if(footballSwitch.getYellowCard73599()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599)!=null){
+                        footballMinScores1.setYellowCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599).getYellowCard());
+                    }
+                }
+                //45-60钟红牌
+                if(footballSwitch.getRedCard73599()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599)!=null){
+                        footballMinScores1.setRedCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_73599).getRedCard());
+                    }
+                }
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_73599, footballMinScores1);
+            } else if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_74499) {
+                FootballScores footballMinScores2 = standardScores.get(SportPeriodConstant.FootballPeriod.period_74499);
+                if (footballMinScores2 == null) {
+                    footballMinScores2 = new FootballScores(SportPeriodConstant.FootballPeriod.period_74499);
+                    standardScores.put(SportPeriodConstant.FootballPeriod.period_74499, footballMinScores2);
+                }
+                //60-75分钟进球
+                if(footballSwitch.getGoal74499()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499)!=null){
+                        footballMinScores2.setGoal(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499).getGoal());
                     }
                 }
                 //60-75分钟角球
                 if(footballSwitch.getCorner74499()==1){
-                    if(allPeriodScores.get(74499L)!=null){
-                        footballMinScores2.setCorner(allPeriodScores.get(74499L).getCorner());
-                    }
-                }
-                //75-90分钟角球
-                if(footballSwitch.getCorner75399()==1){
-                    if(allPeriodScores.get(75399L)!=null){
-                        footballMinScores3.setCorner(allPeriodScores.get(75399L).getCorner());
-                    }
-                }
-                if (footballSwitch.getYellowFt() == 1) {
-                    standScores.setYellowCard(thirdScores.getYellowCard());
-                }
-                //45-60钟黄牌
-                if(footballSwitch.getYellowCard73599()==1){
-                    if(allPeriodScores.get(73599L)!=null){
-                        footballMinScores1.setYellowCard(allPeriodScores.get(73599L).getYellowCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499)!=null){
+                        footballMinScores2.setCorner(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499).getCorner());
                     }
                 }
                 //60-75分钟黄牌
                 if(footballSwitch.getYellowCard74499()==1){
-                    if(allPeriodScores.get(74499L)!=null){
-                        footballMinScores2.setYellowCard(allPeriodScores.get(74499L).getYellowCard());
-                    }
-                }
-                //75-90分钟黄牌
-                if(footballSwitch.getYellowCard75399()==1){
-                    if(allPeriodScores.get(75399L)!=null){
-                        footballMinScores3.setYellowCard(allPeriodScores.get(75399L).getYellowCard());
-                    }
-                }
-                if (footballSwitch.getRedFt() == 1) {
-                    standScores.setRedCard(thirdScores.getRedCard());
-                }
-                //45-60钟红牌
-                if(footballSwitch.getRedCard73599()==1){
-                    if(allPeriodScores.get(73599L)!=null){
-                        footballMinScores1.setRedCard(allPeriodScores.get(73599L).getRedCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499)!=null){
+                        footballMinScores2.setYellowCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499).getYellowCard());
                     }
                 }
                 //60-75分钟红牌
                 if(footballSwitch.getRedCard74499()==1){
-                    if(allPeriodScores.get(74499L)!=null){
-                        footballMinScores2.setRedCard(allPeriodScores.get(74499L).getRedCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499)!=null){
+                        footballMinScores2.setRedCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_74499).getRedCard());
+                    }
+                }
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_74499, footballMinScores2);
+            } else if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_75399) {
+                FootballScores footballMinScores3 = standardScores.get(SportPeriodConstant.FootballPeriod.period_75399);
+                if (footballMinScores3 == null) {
+                    footballMinScores3 = new FootballScores(SportPeriodConstant.FootballPeriod.period_75399);
+                    standardScores.put(SportPeriodConstant.FootballPeriod.period_75399, footballMinScores3);
+                }
+
+                //75-90分钟进球
+                if(footballSwitch.getGoal75399()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399)!=null){
+                        footballMinScores3.setGoal(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399).getGoal());
+                    }
+                }
+                //75-90分钟角球
+                if(footballSwitch.getCorner75399()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399)!=null){
+                        footballMinScores3.setCorner(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399).getCorner());
+                    }
+                }
+                //75-90分钟黄牌
+                if(footballSwitch.getYellowCard75399()==1){
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399)!=null){
+                        footballMinScores3.setYellowCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399).getYellowCard());
                     }
                 }
                 //75-90分钟红牌
                 if(footballSwitch.getRedCard75399()==1){
-                    if(allPeriodScores.get(75399L)!=null){
-                        footballMinScores3.setRedCard(allPeriodScores.get(75399L).getRedCard());
+                    if(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399)!=null){
+                        footballMinScores3.setRedCard(allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_75399).getRedCard());
                     }
                 }
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_75399, footballMinScores3);
+            }else if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_7) {
+                //获取三方比分当前阶段的比分
+                FootballScores thirdScores = entry.getValue();
+                if(thirdScores==null){
+                    thirdScores = new FootballScores(entry.getKey());
+                }
+                if (footballSwitch.getGoalFt() == 1) {
+                    standScores.setGoal(thirdScores.getGoal());
+                }
+                if (footballSwitch.getCornerFt() == 1) {
+                    standScores.setCorner(thirdScores.getCorner());
+                }
+                if (footballSwitch.getYellowFt() == 1) {
+                    standScores.setYellowCard(thirdScores.getYellowCard());
+                }
+                if (footballSwitch.getRedFt() == 1) {
+                    standScores.setRedCard(thirdScores.getRedCard());
+                }
                 //三方的进攻危险进攻射正射偏控球率数据同步
                 this.setOther(standScores, thirdScores);
-                standardScores.put(7L, standScores);
-                standardScores.put(73599L, footballMinScores1);
-                standardScores.put(74499L, footballMinScores2);
-                standardScores.put(75399L, footballMinScores3);
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_7, standScores);
             }
-            if (entry.getKey() == 41L) {
+            if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_41) {
                 //获取三方比分当前阶段的比分
                 FootballScores thirdScores = entry.getValue();
                 if(thirdScores==null){
@@ -595,9 +631,9 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                 }
                 //三方的进攻危险进攻射正射偏控球率数据同步
                 this.setOther(standScores, thirdScores);
-                standardScores.put(41L, standScores);
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_41, standScores);
             }
-            if (entry.getKey() == 42L) {
+            if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_42) {
                 //获取三方比分当前阶段的比分
                 FootballScores thirdScores = entry.getValue();
                 if(thirdScores==null){
@@ -617,11 +653,11 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                 }
                 //三方的进攻危险进攻射正射偏控球率数据同步
                 this.setOther(standScores, thirdScores);
-                standardScores.put(42L, standScores);
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_42, standScores);
             }
-            if (entry.getKey() == 41L || entry.getKey() == 42L) {
+            if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_41 || entry.getKey() == SportPeriodConstant.FootballPeriod.period_42) {
                 hasOt = true;
-                FootballScores ot1 = allPeriodScores.get(41L);
+                FootballScores ot1 = allPeriodScores.get(SportPeriodConstant.FootballPeriod.period_41);
                 otHomeGoal += ot1.getGoal().getHome();
                 otAwayGoal += ot1.getGoal().getAway();
                 otHomeCorner += ot1.getCorner().getHome();
@@ -644,7 +680,7 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                 otShotHome += ot1.getShot().getHome();
                 otShotAway += ot1.getShot().getAway();
             }
-            if (entry.getKey() == 6L || entry.getKey() == 7L) {
+            if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_6 || entry.getKey() == SportPeriodConstant.FootballPeriod.period_7) {
                 FootballScores ftScore = entry.getValue();
                 if (ftScore != null) {
                     homeGoal += ftScore.getGoal().getHome();
@@ -670,7 +706,7 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                     shotAway += ftScore.getShot().getAway();
                 }
             }
-            if (entry.getKey() == 50L) {
+            if (entry.getKey() == SportPeriodConstant.FootballPeriod.period_50) {
                 //获取三方比分当前阶段的比分
                 FootballScores thirdScores = entry.getValue();
                 if(thirdScores==null){
@@ -681,15 +717,15 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
                     standScores.setGoal(thirdScores.getGoal());
                 }
                 log.info("{}，同步点球大战比分2：{}", footballSwitch.getPenalty(), standScores);
-                standardScores.put(50L, standScores);
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_50, standScores);
             }
         }
         //存在加时赛
         if(hasOt){
-            FootballScores standScoresOts = standardScores.get(110L);
+            FootballScores standScoresOts = standardScores.get(SportPeriodConstant.FootballPeriod.period_110);
             if (standScoresOts == null) {
-                standScoresOts = new FootballScores(110L);
-                standardScores.put(110L, standScoresOts);
+                standScoresOts = new FootballScores(SportPeriodConstant.FootballPeriod.period_110);
+                standardScores.put(SportPeriodConstant.FootballPeriod.period_110, standScoresOts);
             }
             if (footballSwitch.getGoalOt() == 1) {
                 standScoresOts.setGoal(new CommonItem(otHomeGoal, otAwayGoal));
@@ -715,14 +751,14 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
             standScoresOts.setShotOff(new CommonItem(otShotOffHome, otShotOffAway));
             standScoresOts.setShot(new CommonItem(otShotHome, otShotAway));
             //阶段41|| 42
-            standardScores.put(110L, standScoresOts);
+            standardScores.put(SportPeriodConstant.FootballPeriod.period_110, standScoresOts);
         }
 
 
-        FootballScores standScoresEnd = standardScores.get(100L);
+        FootballScores standScoresEnd = standardScores.get(SportPeriodConstant.FootballPeriod.period_100);
         if (standScoresEnd == null) {
-            standScoresEnd = new FootballScores(100L);
-            standardScores.put(100L, standScoresEnd);
+            standScoresEnd = new FootballScores(SportPeriodConstant.FootballPeriod.period_100);
+            standardScores.put(SportPeriodConstant.FootballPeriod.period_100, standScoresEnd);
         }
         standScoresEnd.setGoal(new CommonItem(homeGoal, awayGoal));
         standScoresEnd.setCorner(new CommonItem(homeCorner, awayCorner));
@@ -738,7 +774,7 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         standScoresEnd.setShotOn(new CommonItem(shotOnHome, shotOnAway));
         standScoresEnd.setShotOff(new CommonItem(shotOffHome, shotOffAway));
         standScoresEnd.setShot(new CommonItem(shotHome, shotAway));
-        standardScores.put(100L, standScoresEnd);
+        standardScores.put(SportPeriodConstant.FootballPeriod.period_100, standScoresEnd);
 
 
 //        FootballScores wholeStands = standardScores.get(WHOLE_MATCH);
@@ -750,7 +786,11 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
             //计算每个阶段的罚牌比分
             entry.getValue().countFaCard();
         }
-
+        FootballScores wholeStands = standardScores.get(WHOLE_MATCH);
+        wholeStands.setGoal(new CommonItem(homeGoal+otHomeGoal, awayGoal+otAwayGoal));
+        wholeStands.setCorner(new CommonItem(homeCorner+otHomeCorner, awayCorner+otAwayCorner));
+        wholeStands.setYellowCard(new CommonItem(homeYellowCard+otHomeYellowCard, awayYellowCard+otAwayYellowCard));
+        wholeStands.setRedCard(new CommonItem(homeRedCard+otHomeRedCard, awayRedCard+otAwayRedCard));
         return standardScores;
     }
     private void calcWholeScore(FootballScores wholeSores,FootballScores standScores) {
@@ -892,7 +932,8 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         SaleUpdateLiveBusinessEventMessage data= request.getData();
         String linkId = request.getLinkId();
         //0.先只做足球 91886 接入篮球
-        if(!data.getSportId().equals(1L) && !data.getSportId().equals(2L)){
+        if(!data.getSportId().equals(1L) && !data.getSportId().equals(2L)&& !data.getSportId().equals(7L) && !data.getSportId().equals(9L)){
+            log.info("【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】赛种不支持复制");
             return;
         }
         //1. PD PD2之间不来回复制
@@ -912,7 +953,8 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         }
         MatchScoresInfo matchScoresInfoNew =  this.getMatchScoreByCodeAndStandardMatchId(data.getBusinessEventCode(),data.getMatchId(),linkId);
         if(matchScoresInfoNew==null){
-            matchScoresInfoNew = new MatchScoresInfo();
+            log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】复制比分新事件源无比分数据:{}",request.getLinkId(),data.getBusinessEventCode());
+            return ;
         }
         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】复制比分完成:{}-->{}",request.getLinkId(),data.getBusinessEventCodeOld(),data.getBusinessEventCode());
 
@@ -924,14 +966,15 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
         MatchTimeInfo matchTimeInfoNew  =  this.getMatchTimeByCodeAndStandardMatchId(data.getBusinessEventCode(),data.getMatchId(),matchScoresInfoNew,linkId);
         if(matchTimeInfoNew==null){
             log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】复制时间新事件源无时间数据:{}",request.getLinkId(),data.getBusinessEventCode());
-            matchTimeInfoNew = new MatchTimeInfo();
+//            matchTimeInfoNew = new MatchTimeInfo();
+            return;
         }
         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+request.getData().getMatchId()+"::】复制时间完成:{}-->{}",request.getLinkId(),data.getBusinessEventCodeOld(),data.getBusinessEventCode());
 
         this.copyMatchScoreAndTime(matchScoresInfoOld,matchScoresInfoNew,matchTimeInfoOld,matchTimeInfoNew,linkId);
 
-        //3.推送报球版WS 刷新比分
-        redisUtils.pushFootBallScore(matchScoresInfoNew.getThirdMatchId());
+//        //3.推送报球版WS 刷新比分
+//        redisUtils.pushFootBallScore(matchScoresInfoNew.getThirdMatchId());
     }
 
     private MatchScoresInfo getMatchScoreByCodeAndStandardMatchId(String businessEventCodeOld, Long matchId,String linkId) {
@@ -960,15 +1003,41 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
 
     private void copyMatchScoreAndTime(MatchScoresInfo oldScore, MatchScoresInfo matchScoresInfo, MatchTimeInfo oldTimeInfo, MatchTimeInfo matchTimeInfo,String linkId) {
         //1.复制比分
-     try {
+        log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始1，oldScore：{}",linkId,oldScore);
+        log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始2，matchScoresInfo：{}",linkId,matchScoresInfo);
+        log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始3，oldTimeInfo：{}",linkId,oldTimeInfo);
+        log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始4，matchTimeInfo：{}",linkId,matchTimeInfo);
+        try {
          Long newScoreId =matchScoresInfo.getId();
          Long newTimeId =matchTimeInfo.getId();
          Long thirdMatchId=matchScoresInfo.getThirdMatchId();
          String thirdMatchSourceId=matchScoresInfo.getThirdMatchSourceId();
          String dataSourceCode =  matchScoresInfo.getDataSourceCode();
+         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始5:{}-->{}--->{}--->{}--->{}",
+                 linkId,newScoreId,newTimeId,thirdMatchId,thirdMatchSourceId,dataSourceCode);
          //2.复制时间
-         BeanUtils.copyProperties(oldScore,matchScoresInfo);
+        String destScoresJson = matchScoresInfo.getScoresJson();
+        BeanUtils.copyProperties(oldScore,matchScoresInfo);
+        if(StringUtils.isNotEmpty(destScoresJson)) {
+            String srcScoresJson = matchScoresInfo.getScoresJson();
+            JSONObject destJson = JSONObject.parseObject(destScoresJson);
+            JSONObject srcJson = StringUtils.isNotEmpty(srcScoresJson)
+                    ? JSONObject.parseObject(srcScoresJson)
+                    : new JSONObject();
+            for (String periodKey : destJson.keySet()) {
+                if(!srcJson.containsKey(periodKey)) {
+                    srcJson.put(periodKey, destJson.get(periodKey));
+                }
+            }
+            matchScoresInfo.setScoresJson(srcJson.toJSONString());
+            log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】复制比分合并阶段，新事件源保留的独有阶段：{}",
+                    linkId, srcJson.keySet());
+        }
+         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始6:matchScoresInfo-->{}",
+                 linkId,matchScoresInfo);
          BeanUtils.copyProperties(oldTimeInfo,matchTimeInfo);
+         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始7:matchTimeInfo-->{}",
+                 linkId,matchTimeInfo);
          // oldTimeInfo 阶段period大于0滚球状态。就标记为中场切换PD,就存redis. key 过期时间36小时
          // 结算那边。判断redis, PD 存在 return 返回，不参与结算
          matchScoresInfo.setId(newScoreId);
@@ -983,14 +1052,101 @@ public class SoldMessageScoresConsumer implements RocketMQListener<Request<SaleU
          if(null==matchScoresInfo.getMatchLength()){
              matchScoresInfo.setMatchLength(0);
          }
+         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始8:matchScoresInfo-->{}",
+                 linkId,matchScoresInfo);
+         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分开始9:matchTimeInfo-->{}",
+                 linkId,matchTimeInfo);
 //         matchScoresInfoMapper.updateByPrimaryKey(matchScoresInfo);
 //         matchTimeInfoMapper.updateByPrimaryKey(matchTimeInfo);
          //其他数据商还要刷新缓存
          matchScoreInfoRepository.updateScoresInfo(matchScoresInfo);
          matchTimeInfoRepository.updateByPrimaryKey(matchTimeInfo);
+         log.info("{}【SoldMessageScoresConsumer:"+ SOLD_MESSAGE+"】【::"+linkId+"::】测试日志复制比分",linkId);
         } catch (Exception e) {
             log.error("linkId:{}, 事件源切换复制比分：复制比分异常：",linkId,e);
         }
+    }
+
+    /**
+     * 斯诺克数据源切换时映射阶段 period：
+     * - 切到 PD：将 “序号局(1..35)” 或 “结束阶段(301..)” 映射到 PD 的局开始阶段(8/9/.../441/442/...)
+     * - 切离 PD：将 PD 的局开始/结束阶段映射为 “序号局(1..35)”（保持旧数据源存储口径）
+     */
+    private void mapSnookerPeriodForDataSourceSwitch(MatchScoresInfo oldScore, MatchTimeInfo oldTimeInfo, boolean toPd) {
+        if (oldScore == null || oldTimeInfo == null) return;
+        Long srcPeriod = oldTimeInfo.getPeriod();
+        Long mapped = toPd ? mapSnookerPeriodToPd(srcPeriod) : mapSnookerPeriodFromPd(srcPeriod);
+        oldTimeInfo.setPeriod(mapped);
+        oldScore.setPeriod(mapped);
+    }
+
+    private static Long mapSnookerPeriodToPd(Long srcPeriod) {
+        if (srcPeriod == null) return null;
+        if (srcPeriod <= 0) return srcPeriod;
+        // 旧数据源可能用 1..35 表示第N局
+        if (srcPeriod <= 35) {
+            return SportPeriodConstant.SnookerPeriod.getPeriodByIndex(srcPeriod.intValue());
+        }
+        // 结束阶段映射到开始阶段（301->8 等），其它阶段原样返回（445/80/100 等）
+        return SportPeriodConstant.SnookerPeriod.getSnookerPeriod(srcPeriod);
+    }
+
+    private static Long mapSnookerPeriodFromPd(Long srcPeriod) {
+        if (srcPeriod == null) return null;
+        if (srcPeriod <= 0) return srcPeriod;
+        Long begin = SportPeriodConstant.SnookerPeriod.getSnookerPeriod(srcPeriod);
+        return SportPeriodConstant.SnookerPeriod.getIndexByPeriod(begin);
+    }
+
+    /**
+     * 切到 PD 数据源时，补齐报球板所需 Redis 状态。
+     * 这些字段会出现在 getCurrentMatchInfo 返回的 matchStatus 中（截图红框）。
+     */
+    private void refreshSnookerPdMatchStatusCache(Long thirdMatchId, MatchTimeInfo matchTimeInfo, MatchScoresInfo matchScoresInfo) {
+        if (thirdMatchId == null) return;
+        String key = SnookerConstant.RONGHE_PD_MATCH_STATUS + thirdMatchId;
+        // 当前阶段：以 timeInfo.period 为准
+        Long periodId = matchTimeInfo != null ? matchTimeInfo.getPeriod() : 0L;
+        redisService.hSet(key, SnookerConstant.MATCH_CURRENT_PERIOD, periodId == null ? 0L : periodId, RedisConfig.REDIS_WEEK_TIME);
+        // 赛制：报球板 matchStatus 里也会展示（即便 getCurrentMatchInfo 会兜底，这里尽量补齐）
+        Integer matchLength = null;
+        if (matchTimeInfo != null && matchTimeInfo.getMatchLength() != null && matchTimeInfo.getMatchLength() > 0) {
+            matchLength = matchTimeInfo.getMatchLength();
+        } else if (matchScoresInfo != null && matchScoresInfo.getMatchLength() != null && matchScoresInfo.getMatchLength() > 0) {
+            matchLength = matchScoresInfo.getMatchLength();
+        }
+        if (matchLength != null) {
+            redisService.hSet(key, "matchLength", matchLength, RedisConfig.REDIS_WEEK_TIME);
+        }
+        // controlType：原本由 changeMatchStatus 写入 Redis；切源复制时没有对应事件，按 period 兜底一个可预期值
+        Integer controlType = null;
+        if (periodId != null) {
+            if (periodId.equals(80L)) {
+                controlType = 2; // 暂停/中断（与 MatchScoreCommonController 的 period 兜底口径一致）
+            } else if (periodId.equals(100L)) {
+                controlType = 4; // 结束
+            } else if (periodId > 0) {
+                controlType = 1; // 进行中/开赛
+            }
+        }
+        if (controlType != null) {
+            redisService.hSet(key, SnookerConstant.CONTROL_TYPE, controlType, RedisConfig.REDIS_WEEK_TIME);
+        }
+        // 默认置空状态（避免旧数据源残留影响 PD 报球板）
+        redisService.hSet(key, SnookerConstant.KICKOFF_FIRST_CLICK, new CommonItem(0, 0, false), RedisConfig.REDIS_WEEK_TIME);
+        redisService.hSet(key, SnookerConstant.CURRENT_STRIKER, new CommonItem(0, 0, false), RedisConfig.REDIS_WEEK_TIME);
+        redisService.hSet(key, SnookerConstant.MATCH_EVENT_INTERRUPTED, false, RedisConfig.REDIS_WEEK_TIME);
+    }
+
+    public String buildStandardMatchScoreByMap(String scoresJson,String linkId) {
+        JSONObject periodSnookerScores = JSONObject.parseObject(scoresJson);
+        Map<Long, SnookerScores> allPeriodScores= JsonMapUtils.parseSnookerMap(periodSnookerScores);
+        Map<Long, SnookerScores> newAllPeriodScores= new HashMap<>();
+        allPeriodScores.forEach((key,value)->{
+            newAllPeriodScores.put(SportPeriodConstant.SnookerPeriod.getPeriodByIndex(Integer.parseInt(key+"")),value);
+        });
+        log.info("::{}::斯诺克比分编码转换：{}",linkId,newAllPeriodScores);
+        return JSONObject.toJSONString(newAllPeriodScores);
     }
 
 
